--- a/src/components/CrudForm/_createform.scss
+++ b/src/components/CrudForm/_createform.scss
@@ -20,3 +20,18 @@
   text-align: left;
   color: #344054;
 }
+.cancel-button-form {
+  width: 26%;
+  font-size: 17px;
+
+  margin-top: 30px;
+  color: #0188f7;
+  border: 1px solid #0188f7;
+  background-color: white;
+}
+.submit-button-form {
+  width: 26;
+  fon-size: 17px;
+  margin-top: 30px;
+  background-color: #0188f7;
+}
