--- a/src/components/DropDown/_DropDown.scss
+++ b/src/components/DropDown/_DropDown.scss
@@ -26,6 +26,10 @@
 
     &.bottomRight {
       right: 0;
+      box-shadow: 0px 12px 16px 0px #cbf0f473;
+      border: 1px solid #a4ddf8;
+
+      border-radius: 8px;
     }
 
     &.bottomLeft {
