--- a/src/components/EditInputField/_editinputfield.scss
+++ b/src/components/EditInputField/_editinputfield.scss
@@ -61,3 +61,8 @@
     padding-left: 10px;
   }
 }
+.crud-form-popup form .crud-form-field input {
+  padding: 16px 14px;
+  border-radius: 6px;
+  background: white;
+}
