--- a/src/components/Stepper/_Stepper.scss
+++ b/src/components/Stepper/_Stepper.scss
@@ -4,7 +4,8 @@
   border-radius: 0.5rem;
   border-color: transparent;
   background: #d7edff;
-  color: #0188f7;
+  background-color: #0188f7 !important;
+  color: white;
   border: 1px solid #0188f7;
   font-family: Inter;
   font-size: 12.69px;
