--- a/src/components/Navbar/_Navbar.scss
+++ b/src/components/Navbar/_Navbar.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 75px;
   padding: 25px 36px;
-  background: #f0fafb;
+  background: white;
 
   box-shadow: 0px 4px 16px 4px rgba(0, 0, 0, 0.05);
   border-bottom: 1px solid rgb(231, 231, 231);
@@ -71,8 +71,9 @@
     width: 38px;
     display: flex;
     align-items: center;
+    width: 9rem;
     img {
-      width: 25px;
+      width: 25px !important;
       height: 26px;
     }
     .timer {
@@ -84,7 +85,7 @@
   .item-informatin {
     .item-title {
       font-family: Poppins;
-      font-size: 14px;
+      font-size: 12px;
       font-weight: 500;
       line-height: 20px;
       text-align: left;
@@ -93,6 +94,7 @@
     .item-timer {
       display: flex;
       margin-top: 5px;
+      align-items: center;
 
       p {
         font-family: Poppins;
@@ -147,6 +149,7 @@
   width: 24% !important;
   background: #ffffff;
   padding: 5px;
+  height: 3.5rem !important;
   border-radius: 10px;
   display: flex !important;
   justify-content: space-around;
