--- a/src/components/Sidebar/_Sidebar.scss
+++ b/src/components/Sidebar/_Sidebar.scss
@@ -24,7 +24,7 @@
 
   .sidebar-content {
     height: 100%;
-    background: #fafafa;
+    background: white;
     box-shadow: 0px 4px 16px 4px rgba(0, 0, 0, 0.05);
     display: flex;
     flex-direction: column;
