--- a/src/components/SidebarItems/_SidebarItems.scss
+++ b/src/components/SidebarItems/_SidebarItems.scss
@@ -1,5 +1,5 @@
 .sidebar-items {
-  background-color: #fafafa;
+  background-color: white;
   border-radius: 10px;
   padding: 22px;
   height: 100%;
