--- a/src/components/imageGroupeActionControl/_ActionControl.scss
+++ b/src/components/imageGroupeActionControl/_ActionControl.scss
@@ -6,8 +6,10 @@
   .action-popup-button {
     border: none;
     border: none;
+    padding: 0;
+
     svg {
-      color: #506bcc;
+      color: black;
       font-size: 21px;
     }
   }
