--- a/src/features/Dashboard/_Dashboard.scss
+++ b/src/features/Dashboard/_Dashboard.scss
@@ -115,9 +115,18 @@
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
-  font-weight: bold;
+  font-size: 24px;
+  font-weight: 100;
   cursor: pointer;
+  border: 50%;
+  border-radius: 50%;
+  border: 1px solid;
+  background: white;
+  width: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 28px;
 }
 
 .close:hover,
