--- a/src/layout/MainLayout/_MainLayout.scss
+++ b/src/layout/MainLayout/_MainLayout.scss
@@ -22,7 +22,7 @@
       max-height: 100%;
       overflow-y: auto;
       padding: 26px 32px;
-      background: #fafafa;
+      background: white;
     }
   }
 
