--- a/src/components/SelectComp/_selectcomp.scss
+++ b/src/components/SelectComp/_selectcomp.scss
@@ -45,3 +45,70 @@
   align-items: center !important;
   display: flex !important;
 }
+.select-comp {
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.select-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  padding: 9px 12px 9px 12px;
+  gap: 3px;
+  border-radius: 8px;
+  opacity: 0px;
+  border: 1px solid #d0d5dd;
+}
+
+.select-option {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  width: 107px;
+  height: 100px;
+  border-radius: 8px;
+
+  opacity: 0px;
+}
+
+.select-option.selected {
+  border: 1px solid #12b76a;
+  box-shadow: 0px 8px 8px 0px #12b76a3d;
+  background: #f6fef9;
+}
+
+.option-image {
+  width: 50px; /* Adjust the size as needed */
+  height: 50px; /* Adjust the size as needed */
+  margin-bottom: 10px;
+  border: 2px solid transparent; /* Ensures space for the border */
+}
+
+.tick-mark {
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  width: 24px;
+  height: 24px;
+
+  background-color: #12b76a;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tick-mark svg {
+  fill: white;
+}
